Refactor UserService UserDao and Controllers