@@ -6,7 +6,7 @@ import org.springframework.jdbc.core.RowMapper;
 
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.Collections;
+import java.util.Set;
 
 public class UserMapper implements RowMapper<User> {
     @Override
@@ -17,7 +17,7 @@ public class UserMapper implements RowMapper<User> {
         user.setSurname(rs.getString("surname"));
         user.setEmail(rs.getString("email"));
         user.setPassword(rs.getString("password"));
-        user.setAuthorities(Collections.singleton(Role.valueOf(rs.getString("role"))));
+        user.setAuthorities(Set.of(Role.valueOf(rs.getString("role"))));
         return user;
     }
 }
